<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".CardFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_no_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_no">

        <EditText
            android:id="@+id/card_no_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_name"
            android:drawableLeft="@drawable/ic_action_name"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_exp_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/card_exp_date">

            <EditText
                android:id="@+id/card_exp_date_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date_name"
                android:drawableLeft="@drawable/ic_date_name"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_exp_yr_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/card_exp_yr">

            <EditText
                android:id="@+id/card_exp_yr_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_cvv_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_cvv">

        <EditText
            android:id="@+id/card_cvv_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cvv_name"
            android:drawableLeft="@drawable/ic_cvv_name"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit" />

</LinearLayout>

